--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,5 +2,12 @@
 
 ## v0.1
 
+### New features
+
 - enable the conversion of polly labivew files to EARLINET nc files
 - enalbe auto-search the configuration file for the labivew file
+
+### TODO
+
+- support for Picasso profiles (#1)
+- calculations for the vertical_resolution (#5)
