feat: rename the repo as polly2scc
rename the repository as polly2scc, meanwhile unify the naming across all documents (close #18)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGES
 =======
 
+v1.2
+----
+
+* style: test pip upgrade
 * Package managing with pbr
 * refactor: rm \_\_init\_\_.py
 * improvement(setup.py): manage python packaging with pbr
@@ -36,8 +40,8 @@ v1.1
 * docs(changelog): update CHANGELOG
 * docs(readme.md): update readme
 
-1.0
----
+v1.0
+----
 
 * style: version 1.0
 * style: version 1.0
