--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+HolgerPollyNet <55800803+HolgerPollyNet@users.noreply.github.com>
 ZP.Yin <ZP.Yin@whu.edu.cn>
 ZPYin <528172875@qq.com>
 ZPYin <ZP.Yin@whu.edu.cn>
